Firebase Authentification (Test 1)

--- a/www/templates/homeLogin.html
+++ b/www/templates/homeLogin.html
@@ -1,13 +1,13 @@
 <ion-view title="Home - Login" id="page2" style="background-color:#DFFFFF;">
-  <ion-content padding="true" class="has-header">
-    <div id="homeLogin-button-bar1" class="button-bar"></div>
-    <div class="list card" id="homeLogin-card22">
-      <ion-item class="item-avatar" id="homeLogin-list-item7">
-        <h2>[Username]</h2>
-        <p>Welcome [Username]</p>
-      </ion-item>
-      <a ui-sref="tabsController.home" id="homeLogin-button8" class="button button-positive  button-block">Logout</a>
-    </div>
-    <a ui-sref="tabsController.createSurvey" id="homeLogin-button7" style="font-weight:500;" class="button button-calm button-large button-block">Create Survey</a>
-  </ion-content>
+    <ion-content padding="true" class="has-header">
+        <div id="homeLogin-button-bar1" class="button-bar"></div>
+        <div class="list card" id="homeLogin-card22">
+            <ion-item class="item-avatar" id="homeLogin-list-item7">
+                <h2>[Username]</h2>
+                <p>Welcome [Username]</p>
+            </ion-item>
+            <a ui-sref="tabsController.home" id="homeLogin-button8" class="button button-positive  button-block" ng-click="logout()">Logout</a>
+        </div>
+        <a ui-sref="tabsController.createSurvey" id="homeLogin-button7" style="font-weight:500;" class="button button-calm button-large button-block">Create Survey</a>
+    </ion-content>
 </ion-view>
