--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,19 +1,19 @@
 <ion-view title="Login" id="page5">
-  <ion-content padding="true" class="has-header">
-    <form id="login-form1" class="list">
-      <ion-list id="login-list1">
-        <label class="item item-input" id="login-input1">
+    <ion-content padding="true" class="has-header">
+        <form id="login-form1" class="list">
+            <ion-list id="login-list1">
+                <label class="item item-input" id="login-input1">
           <span class="input-label">Username</span>
-          <input type="text" placeholder="">
+          <input type="text" placeholder="" ng-model="user.email">
         </label>
-        <label class="item item-input" id="login-input2">
+                <label class="item item-input" id="login-input2">
           <span class="input-label">Password</span>
-          <input type="password" placeholder="">
+          <input type="password" placeholder="" ng-model="user.password">
         </label>
-      </ion-list>
-      <div class="spacer" style="height: 40px;"></div>
-      <a ui-sref="tabsController.homeLogin" id="login-button1" class="button button-stable  button-block">Log in</a>
-      <a ui-sref="tabsController.signup" id="login-button2" class="button button-positive  button-block button-clear">Or create an account</a>
-    </form>
-  </ion-content>
+            </ion-list>
+            <div class="spacer" style="height: 40px;"></div>
+            <a ui-sref="tabsController.homeLogin" id="login-button1" class="button button-stable  button-block" ng-click="validateUser()">Log in</a>
+            <a ui-sref="tabsController.signup" id="login-button2" class="button button-positive  button-block button-clear">Or create an account</a>
+        </form>
+    </ion-content>
 </ion-view>
