--- a/www/templates/signup.html
+++ b/www/templates/signup.html
@@ -1,21 +1,17 @@
 <ion-view title="Signup" id="page6">
-  <ion-content padding="true" class="has-header">
-    <form id="signup-form2" class="list">
-      <ion-list id="signup-list2">
-        <label class="item item-input" id="signup-input4">
+    <ion-content padding="true" class="has-header">
+        <form id="signup-form2" class="list">
+            <ion-list id="signup-list2">
+                <label class="item item-input" id="signup-input4">
           <span class="input-label">Username</span>
-          <input type="text" placeholder="">
+          <!--<input type="text" placeholder="" ng-model="user.email">-->
         </label>
-        <label class="item item-input" id="signup-input3">
-          <span class="input-label">Email</span>
-          <input type="email" placeholder="">
-        </label>
-        <label class="item item-input" id="signup-input5">
+                <label class="item item-input" id="signup-input5">
           <span class="input-label">Password</span>
-          <input type="password" placeholder="">
+          <input type="password" placeholder="" ng-model="user.password">
         </label>
-      </ion-list>
-      <a ui-sref="tabsController.login" id="signup-button3" class="button button-stable  button-block">Sign up</a>
-    </form>
-  </ion-content>
+            </ion-list>
+            <a ui-sref="tabsController.login" id="signup-button3" ng-click="createUser()" class="button button-stable  button-block">Sign up</a>
+        </form>
+    </ion-content>
 </ion-view>
