--- a/www/templates/signup.html
+++ b/www/templates/signup.html
@@ -15,7 +15,7 @@
           <input type="password" placeholder="">
         </label>
       </ion-list>
-      <a ui-sref="" id="signup-button3" class="button button-stable  button-block">Sign up</a>
+      <a ui-sref="" id="signup-button3" class="button button-stable  button-block" ng-click="createUser()>Sign up</a>
     </form>
   </ion-content>
 </ion-view>
