but mostly error

--- a/www/templates/signup.html
+++ b/www/templates/signup.html
@@ -15,7 +15,10 @@
           <input type="password" placeholder="">
         </label>
       </ion-list>
-      <a ui-sref="" id="signup-button3" class="button button-stable  button-block" ng-click="createUser()>Sign up</a>
+        <label class="item item-input">
+      <button class="button button-block button-positive" ng-click="createUser()">
+        Sign Up
+      </button>
     </form>
   </ion-content>
 </ion-view>
