Firebase Dependecy and Setup Scripts ng-controller references in templates for testing authentification

--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,5 +1,5 @@
 <ion-view title="Login" id="page5">
-    <ion-content padding="true" class="has-header">
+    <ion-content padding="true" class="has-header" ng-controller="loginCtrl">
         <form id="login-form1" class="list">
             <ion-list id="login-list1">
                 <label class="item item-input" id="login-input1">
