--- a/www/templates/signup.html
+++ b/www/templates/signup.html
@@ -1,10 +1,10 @@
 <ion-view title="Signup" id="page6">
-    <ion-content padding="true" class="has-header">
+    <ion-content padding="true" class="has-header" ng-controller="signupCtrl">
         <form id="signup-form2" class="list">
             <ion-list id="signup-list2">
                 <label class="item item-input" id="signup-input4">
           <span class="input-label">Username</span>
-          <!--<input type="text" placeholder="" ng-model="user.email">-->
+          <input type="text" placeholder="" ng-model="user.email">
         </label>
                 <label class="item item-input" id="signup-input5">
           <span class="input-label">Password</span>
