--- a/www/templates/signup.html
+++ b/www/templates/signup.html
@@ -16,7 +16,7 @@
         </label>
       </ion-list>
         <label class="item item-input">
-      <button class="button button-block button-positive" ng-click="createUser()">
+      <button class="button button-block button-positive" ng-click="createUser(signup-input4, signup-input3, signup-input5)">
         Sign Up
       </button>
     </form>
