--- a/www/templates/homeLogin.html
+++ b/www/templates/homeLogin.html
@@ -1,5 +1,5 @@
 <ion-view title="Home - Login" id="page2" style="background-color:#DFFFFF;">
-    <ion-content padding="true" class="has-header" ng-controller="loginCtrl">
+    <ion-content padding="true" class="has-header" ng-controller="homeLoginCtrl">
         <div id="homeLogin-button-bar1" class="button-bar"></div>
         <div class="list card" id="homeLogin-card22">
             <ion-item class="item-avatar" id="homeLogin-list-item7">
