Another Auth Test Let the methods do the routing base on the proper auth

--- a/www/templates/homeLogin.html
+++ b/www/templates/homeLogin.html
@@ -6,7 +6,7 @@
                 <h2>[Username]</h2>
                 <p>Welcome [Username]</p>
             </ion-item>
-            <a ui-sref="tabsController.home" id="homeLogin-button8" class="button button-positive  button-block" ng-click="logout()">Logout</a>
+            <a id="homeLogin-button8" class="button button-positive  button-block" ng-click="logout()">Logout</a>
         </div>
         <a ui-sref="tabsController.createSurvey" id="homeLogin-button7" style="font-weight:500;" class="button button-calm button-large button-block">Create Survey</a>
     </ion-content>
