--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -12,7 +12,7 @@
         </label>
             </ion-list>
             <div class="spacer" style="height: 40px;"></div>
-            <a ui-sref="tabsController.homeLogin" id="login-button1" class="button button-stable  button-block" ng-click="validateUser()">Log in</a>
+            <a id="login-button1" class="button button-stable  button-block" ng-click="validateUser()">Log in</a>
             <a ui-sref="tabsController.signup" id="login-button2" class="button button-positive  button-block button-clear">Or create an account</a>
         </form>
     </ion-content>
