--- a/www/templates/signup.html
+++ b/www/templates/signup.html
@@ -11,7 +11,7 @@
           <input type="password" placeholder="" ng-model="user.password">
         </label>
             </ion-list>
-            <a ui-sref="tabsController.login" id="signup-button3" ng-click="createUser()" class="button button-stable  button-block">Sign up</a>
+            <a id="signup-button3" ng-click="createUser()" class="button button-stable  button-block">Sign up</a>
         </form>
     </ion-content>
 </ion-view>
