--- a/www/templates/homeLogin.html
+++ b/www/templates/homeLogin.html
@@ -3,8 +3,14 @@
         <div id="homeLogin-button-bar1" class="button-bar"></div>
         <div class="list card" id="homeLogin-card22">
             <ion-item class="item-avatar" id="homeLogin-list-item7">
-                <h2>[Username]</h2>
-                <p>Welcome [Username]</p>
+                <h2>
+                    <%= title %>
+                        <%= title2 %>
+                </h2>
+                <p>Welcome,
+                    <%= title %>
+                        <%= title2 %>
+                </p>
             </ion-item>
             <a ui-sref="tabsController.home" id="homeLogin-button8" class="button button-positive  button-block" ng-click="logout()">Logout</a>
         </div>
