--- a/www/templates/homeLogin.html
+++ b/www/templates/homeLogin.html
@@ -6,6 +6,8 @@
                 <h2>
                     <%= title %>
                         <%= title2 %>
+                            <%= title3 %>
+                                <%= title4 %>
                 </h2>
                 <p>Welcome,
                     <%= title %>
