Firebase Dependecy and Setup Scripts (Reupload)

--- a/www/templates/homeLogin.html
+++ b/www/templates/homeLogin.html
@@ -1,18 +1,10 @@
 <ion-view title="Home - Login" id="page2" style="background-color:#DFFFFF;">
-    <ion-content padding="true" class="has-header" ng-controller="homeLoginCtrl">
+    <ion-content padding="true" class="has-header" ng-controller="loginCtrl">
         <div id="homeLogin-button-bar1" class="button-bar"></div>
         <div class="list card" id="homeLogin-card22">
             <ion-item class="item-avatar" id="homeLogin-list-item7">
-                <h2>
-                    <%= title %>
-                        <%= title2 %>
-                            <%= title3 %>
-                                <%= title4 %>
-                </h2>
-                <p>Welcome,
-                    <%= title %>
-                        <%= title2 %>
-                </p>
+                <h2>[Username]</h2>
+                <p>Welcome [Username]</p>
             </ion-item>
             <a ui-sref="tabsController.home" id="homeLogin-button8" class="button button-positive  button-block" ng-click="logout()">Logout</a>
         </div>
