--- a/www/templates/homeLogin.html
+++ b/www/templates/homeLogin.html
@@ -5,10 +5,10 @@
             <ion-item class="item-avatar" id="homeLogin-list-item7">
 
                 <div ng-controller="loginCtrl">
-                    Hello, <span ng-bind="userEmail"></span>!
+                    Hello, <span ng-bind="user.email"></span>!
                 </div>
             </ion-item>
-            <a ui-sref="tabsController.home" id="homeLogin-button8" class="button button-positive  button-block" ng-click="logout()">Logout</a>
+            <a ui-sref="tabsController.home" id="homeLogin-button8" class="button button-positive  button-block" ng-click="signOut()">Logout</a>
         </div>
         <a ui-sref="tabsController.createSurvey" id="homeLogin-button7" style="font-weight:500;" class="button button-calm button-large button-block">Create Survey</a>
     </ion-content>
