--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,5 +1,5 @@
 <ion-view title="Home" id="page8" style="background-color:#DFFFFF;">
-    <ion-content padding="true" class="has-header" ng-controller="homeLoginCtrl">
+    <ion-content padding="true" class="has-header" ng-controller="homeCtrl">
         <div id="home-button-bar3" class="button-bar"></div>
         <div id="home-container4">
             <div class="spacer" style="width: 300px; height: 43px;"></div>
