--- a/www/templates/homeLogin.html
+++ b/www/templates/homeLogin.html
@@ -32,7 +32,8 @@
 
                 <div ng-controller="homeLoginCtrl">
                     <h2>Hello,
-                        <p id="memo" ng-controller="homeLoginCtrl"></p>!</h2>
+                        <p id="memo" ng-controller="homeLoginCtrl"></p>
+                    </h2>
                 </div>
             </ion-item>
             <a id="homeLogin-button8" class="button button-positive  button-block" ng-click="logout()">Logout</a>
