--- a/www/templates/signup.html
+++ b/www/templates/signup.html
@@ -4,14 +4,14 @@
             <ion-list id="signup-list2">
                 <label class="item item-input" id="signup-input4">
           <span class="input-label">Username</span>
-          <input type="text" placeholder="" ng-model="user.email">
+          <input type="text" placeholder="" ng-model="user.email" required>
         </label>
                 <label class="item item-input" id="signup-input5">
           <span class="input-label">Password</span>
-          <input type="password" placeholder="" ng-model="user.password">
+          <input type="password" placeholder="" ng-model="user.password" required>
         </label>
             </ion-list>
-            <a id="signup-button3" ng-click="createUser()" class="button button-stable  button-block">Sign up</a>
+            <a ui-sref="tabsController.login" id="signup-button3" ng-click="createUser()" class="button button-stable  button-block">Sign up</a>
         </form>
     </ion-content>
 </ion-view>
